# stash

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  DESIGN.md  README.md  USE_CASES.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  integrations-overview.html  pyproject.toml  render.yaml  start.sh  stash_product_vision.md
.claude-plugin/: marketplace.json
backend/: Dockerfile  auth.py  celery_app.py  config.py  database.py  entrypoint.sh  main.py  models.py  requirements-dev.txt  requirements.txt
chrome_extension/: .gitignore  esbuild.config.js  manifest.json  package-lock.json  package.json  popup.html
cli/: __init__.py  app_vfs.py  client.py  config.py  formatting.py  import_history.py  main.py  mcp_server.py  mount.py  telemetry.py
collab/: Dockerfile  package-lock.json  package.json  tsconfig.json
docs/: architecture.html  design-system.md  managed-overlay.md  security-operations.md  security-readiness.md  testing.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
mockups/: sources-ui.html
plans/: duplication-cleanup-roadmap.md  installer-one-liner.md  stash-share-redesign.md  stash-vfs-spike.md
product_spec/: changes_to_product.md  product_chat.md  product_chat_2.md  stash_product_vision.md
scripts/: backfill_slides_skill.py  backfill_transcripts_to_events.py  (+4 more)
(+1101 files in other folders)
