[project]
name = "stashai"
version = "0.1.249"
description = "CLI for Stash — shared memory for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fergana Labs" }]
keywords = ["stash", "ai", "agents", "coding", "memory", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "mcp>=1.23.0",
    "filelock>=3.12",
]

[project.urls]
Homepage = "https://joinstash.ai"
Repository = "https://github.com/Fergana-Labs/stash"

[project.scripts]
stash = "cli.main:app"
stash-mcp = "cli.mcp_server:main"

[tool.setuptools.packages.find]
include = ["cli*", "stashai*", "stashvfs*"]

[tool.setuptools.package-data]
stashai = ["plugin/assets/**/*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "cli", "stashai"]
